[gd_scene load_steps=2 format=3 uid="uid://player_stats_hud_uid"]

[ext_resource type="Script" path="res://ui/PlayerStatsHUD.gd" id="1"]

[node name="PlayerStatsHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 150.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="UsernameLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "üë§ Player"
horizontal_alignment = 1

[node name="ClassLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "‚öîÔ∏è Villager"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="KillsLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "üíÄ Kills: 0"

[node name="DeathsLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "‚ò†Ô∏è Deaths: 0"

[node name="KDLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "üìä K/D: 0.00"

